<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/buttonBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@layout/customborder" >

        <TextView
            android:id="@+id/textViewListName_Main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listname"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextListName_Main"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:ems="10" />
    </LinearLayout>

    
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="287dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="399dp"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room1" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room2" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room3" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room4" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room5" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room6" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room7" />

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room8" />

            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room9" />

            <CheckBox
                android:id="@+id/checkBox10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room10" />

            <CheckBox
                android:id="@+id/checkBox11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room11" />

            <CheckBox
                android:id="@+id/checkBox12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room12" />

            <CheckBox
                android:id="@+id/checkBox13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room13" />

            <CheckBox
                android:id="@+id/checkBox14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room14" />

            <CheckBox
                android:id="@+id/checkBox15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room15" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonSbmit_MakeList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="submitToDB"
            android:text="@string/submit" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/buttonGuide_MakeList"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/guide" />

        <Button
            android:id="@+id/buttonSettings_MakeList"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/settings" />

    </LinearLayout>

</LinearLayout>