<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1_Deletelist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@layout/customborder"
        android:text="@string/tapToDelete"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/listViewFromDB_Deletelist"
        android:layout_width="match_parent"
        android:layout_height="308dp"
        android:longClickable="true" >
    </ListView>

    <TextView
        android:id="@+id/textView2_Deletelist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@layout/customborder"
        android:text="@string/tapToDelete2"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonGuide_Deletelist"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/guide" />

        <Button
            android:id="@+id/buttonSettings_Deletelist"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/settings" />

    </LinearLayout>

</LinearLayout>