<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@layout/customborder"
        android:text="@string/myLists"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/listViewFromDB_ShowLists1"
        android:layout_width="match_parent"
        android:layout_height="310dp" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonDelete_Showlists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="toDeleteActivity"
            android:text="@string/deleteLists" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/buttonGuide_MyR_ShowList"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/guide" />

        <Button
            android:id="@+id/buttonSettings_MyR_ShowList"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/settings" />

    </LinearLayout>

</LinearLayout>