<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewTitle_ShowRooms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@layout/customborder"
        android:text="@string/tapSoftwareToSeeRooms"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/listViewShowRooms_SoftwareArray"
        android:layout_width="match_parent"
        android:layout_height="165dp">
    </ListView>

    <TextView
        android:id="@+id/textViewTitle_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@layout/customborder"
        android:textSize="1sp" />

    <ListView
        android:id="@+id/listViewShowRooms_RoomsContains"
        android:layout_width="match_parent"
        android:layout_height="165dp">
    </ListView>

    <TextView
        android:id="@+id/textViewTitle_empty1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@layout/customborder"
        android:textSize="1sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonGuide_ShowRooms"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/guide" />

        <Button
            android:id="@+id/buttonSettings_ShowRooms"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/settings" />

    </LinearLayout>

</LinearLayout>